--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,31 @@ h3, h4, h5, h6, p, span{
     padding: 30px;
     background-color: #212121;
     border-left: 2px solid #292929;
+    margin-bottom:30px;
+}
+
+.info-box h3{
+  color:#fff;
+  font-family: "Montserrat",sans-serif;
+  font-weight:700;
+  text-transform:uppercase;
+  display:inline-block;
+}
+
+.info-box .logo{
+  float: left;
+  width:100px;
+  padding-right:30px;
+}
+
+.info-box .logo span{
+  text-align:center;
+  font-size:10px;
+  display:inline-block;
+  width:100%;
+}
+
+.info-box .step-1{
 }
 
 .trtl-button{
@@ -50,6 +75,14 @@ h3, h4, h5, h6, p, span{
   border-color: #2ecc71;
   color:#fff;
   text-decoration: none;
+}
+.trtl-button.green{
+    background-color: #2ecc71;
+    border-color: #2ecc71;
+}
+.trtl-button.green:hover {
+    background-color: #27aa6b;
+    border-color: #27aa6b;
 }
 
 .nav {
@@ -88,6 +121,10 @@ h3, h4, h5, h6, p, span{
   padding-top:150px;
 }
 
+.banner .row{
+  margin:0;
+}
+
 .banner h1{
   color:#fff;
   font-weight:100;
@@ -103,13 +140,12 @@ h3, h4, h5, h6, p, span{
 }
 
 .private {
-  font-size: 0.9rem;
-  color: #a00;
+  color: #fff;
+  font-weight:100;
   font-family: "Roboto",sans-serif;
 }
 .private-sm {
-  font-size: 0.8rem;
-  color: #a00;
+  color: #fff;
 }
 
 .qrcode {
@@ -122,6 +158,56 @@ h3, h4, h5, h6, p, span{
   border: 1em dashed;
   z-index: 999;
   display: none;
+}
+
+.footer{
+    margin-left: 16.66666667%;
+    width: 66.66666667%;
+    margin-top:60px;
+    text-align:center;
+    position:relative;
+    padding-left:5px;
+    padding-right:5px;
+    text-align:center;
+}
+
+.footer p{
+  font-size:16px;
+  line-height:22.8571px;
+  font-weight:300;
+  font-family: "Roboto",sans-serif;
+  color:#A2A2A2;
+  display:inline-block;
+  width:100%;
+  text-align:center;
+  margin-top:24px;
+  margin-bottom:60px;
+}
+
+.footer h2 {
+  color:#fff;
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom:32px;
+}
+
+.footer hr{
+  border-top: 1px solid #353535;
+  position:absolute;
+  width:100%;
+  top:6px;
+}
+
+.footer .wrap {
+    position: relative;
+}
+
+.footer .up {
+    position: relative;
+    top:2px;
+}
+
+.btn-primary {
 }
 div {
   /* padding-top: 1rem; padding correction */
