--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,16 @@ h3, h4, h5, h6, p, span{
   color:#fff;
 }
 
+#content{
+  text-align:center;
+}
+
+#content .container{
+  max-width:900px;
+  width:100%;
+  display:inline-block;
+}
+
 #particles-js {
   background: linear-gradient(to right, #2ecc71 0%,#27aa6b 35%,#2ecc71 64%,#229379 100%);
   position: fixed;
@@ -31,29 +41,110 @@ h3, h4, h5, h6, p, span{
 
 .info-box h3{
   color:#fff;
-  font-family: "Montserrat",sans-serif;
-  font-weight:700;
-  text-transform:uppercase;
+  font-family: "Roboto",sans-serif;
+  font-weight:100;
+  font-size:24px;
+  display:inline-block;
+  text-align:left;
+  margin-bottom:15px;
+  width:100%;
+}
+
+.trtl-logo{
+  padding-right:30px;
+  position:relative;
   display:inline-block;
 }
 
-.info-box .logo{
-  float: left;
-  width:100px;
-  padding-right:30px;
+.trtl-logo img{
+  width:60px;
+  margin-top:24px;
 }
 
-.info-box .logo span{
+.trtl-logo span{
   text-align:center;
   font-size:10px;
   display:inline-block;
   width:100%;
+  text-align:center;
+  margin-bottom:32px;
+}
+
+.trtl-logo h3{
+  text-align:center;
+  display:inline-block;
+  font-size:50px;
+  width: 100%;
+  font-weight:100;
+  margin-bottom:0;
+  color:#fff;
+  font-family: "Roboto",sans-serif;
+  margin-top:72px;
+}
+
+.info-box p{
+  font-family: "Roboto",sans-serif;
+  font-size:16px;
+  font-weight:300;
+  line-height:22.8571px;
+  text-align:left;
+  color:#A2A2A2;
+}
+
+.info-box input{
+  background:#272727;
+  border:none;
+  border-left: 2px solid #292929;
+  padding-left:10px;
+  padding-top:6px;
+  padding-bottom:6px;
+  font-family: "Roboto",sans-serif;
+  font-size:14px;
+  color:#fff;
+  -webkit-transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.info-box input:focus{
+  outline:none;
+  background:#151515;
 }
 
 .info-box .step-1{
 }
 
-.trtl-button{
+body .alert-box{
+  border-radius:10px;
+  display:inline-block;
+  max-width:600px;
+  margin-bottom:32px;
+  text-align:left;
+}
+.alert-box strong{
+  color:#fff;
+}
+.alert-box .half, .alert-box .full{
+  float:left;
+  padding:0;
+  padding-left:6px;
+  padding-right:6px;
+}
+.alert-box .half span, .alert-box .full span{
+  width:100%;
+}
+.alert-box .half, .alert-box .full{
+  width:50%;
+}
+.alert-box .full{
+  width:100%;
+}
+.alert-box.red{
+  border:1px solid #dc3545;
+  padding:1rem;
+}
+body .trtl-button{
   border:1px solid #fff;
   border-radius:45px;
   padding:12px 26px;
@@ -64,11 +155,15 @@ h3, h4, h5, h6, p, span{
   color:#fff;
   display:inline-block;
   cursor:pointer;
+  float:none;
   text-transform:uppercase;
   -webkit-transition: all 0.5s ease 0s;
   -moz-transition: all 0.5s ease 0s;
   -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
+}
+.trtl-button:not(:first-child){
+  margin-left:10px;
 }
 .trtl-button:hover {
   background-color: #2ecc71;
@@ -142,7 +237,10 @@ h3, h4, h5, h6, p, span{
 .private {
   color: #fff;
   font-weight:100;
+  font-size:16px;
   font-family: "Roboto",sans-serif;
+  margin-top:0;
+  display:inline-block;
 }
 .private-sm {
   color: #fff;
