--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ h3, h4, h5, h6, p, span{
     background-color: #212121;
     border-left: 2px solid #292929;
     margin-bottom:30px;
+    -webkit-transition: all 0.5s ease 0s;
+    -moz-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
 }
 
 .info-box h3{
@@ -48,6 +52,16 @@ h3, h4, h5, h6, p, span{
   text-align:left;
   margin-bottom:15px;
   width:100%;
+}
+
+.info-box.button-bottom{
+}
+
+.info-box.button-bottom .button-wrap{
+  position:absolute;
+  width:100%;
+  bottom:60px;
+  left:0;
 }
 
 .trtl-logo{
@@ -68,6 +82,7 @@ h3, h4, h5, h6, p, span{
   width:100%;
   text-align:center;
   margin-bottom:32px;
+  font-family: "Montserrat",sans-serif;
 }
 
 .trtl-logo h3{
@@ -79,7 +94,7 @@ h3, h4, h5, h6, p, span{
   margin-bottom:0;
   color:#fff;
   font-family: "Roboto",sans-serif;
-  margin-top:72px;
+  margin-top:32px;
 }
 
 .info-box p{
@@ -92,7 +107,7 @@ h3, h4, h5, h6, p, span{
 }
 
 .info-box input{
-  background:#272727;
+  background:#171717;
   border:none;
   border-left: 2px solid #292929;
   padding-left:10px;
@@ -100,6 +115,7 @@ h3, h4, h5, h6, p, span{
   padding-bottom:6px;
   font-family: "Roboto",sans-serif;
   font-size:14px;
+  font-weight:100;
   color:#fff;
   -webkit-transition: all 0.5s ease 0s;
   -moz-transition: all 0.5s ease 0s;
@@ -109,7 +125,7 @@ h3, h4, h5, h6, p, span{
 
 .info-box input:focus{
   outline:none;
-  background:#151515;
+  background:#0a0a0a;
 }
 
 .info-box .step-1{
@@ -119,11 +135,26 @@ body .alert-box{
   border-radius:10px;
   display:inline-block;
   max-width:600px;
-  margin-bottom:32px;
+  width:100%;
+  margin-top:16px;
+  margin-bottom:16px;
   text-align:left;
 }
 .alert-box strong{
   color:#fff;
+}
+body .alert-box.private-box{
+  max-width:538px;
+  position:relative;
+  padding-left:100px;
+}
+.alert-box.private-box strong{
+  max-width:480px;
+  position:absolute;
+  left:22px;
+}
+.alert-box.address-box{
+  max-width:520px;
 }
 .alert-box .half, .alert-box .full{
   float:left;
@@ -179,7 +210,51 @@ body .trtl-button{
     background-color: #27aa6b;
     border-color: #27aa6b;
 }
+.trtl-button.text-link {
+    background: none;
+    border:none;
+    color: #2ecc71;
+    position:relative;
 
+
+}
+.trtl-button.text-link:after {
+    content:'';
+    position:absolute;
+    width:100%;
+    height:1px;
+    opacity:0;
+    background-color: #2ecc71;
+    -webkit-transition: all 0.5s opacity 0s;
+    -moz-transition: all 0.5s opacity 0s;
+    -o-transition: all 0.5s opacity 0s;
+    transition: all 0.5s opacity 0s;
+}
+.trtl-button.text-link:hover {
+    color: #27aa6b;
+}
+.trtl-button.text-link:focus {
+    background:none;
+    border:none;
+    outline:none;
+    box-shadow:none;
+}
+.trtl-button.text-link:active {
+    background:none;
+    border:none;
+    outline:none;
+}
+.trtl-button.multi{
+  background:none;
+}
+.button-wrap{
+  display:inline-block;
+  width:100%;
+  text-align:center;
+}
+.button-wrap:not(:first-child){
+  margin-top:16px;
+}
 .nav {
   font-family: "Montserrat",sans-serif;
   background: #2f2f2f;
@@ -311,6 +386,17 @@ div {
   /* padding-top: 1rem; padding correction */
 }
 
+
+
+@media only screen and (max-width: 900px){
+  div.erow{
+    display:inline-block;
+  }
+  div.ecol{
+    max-width: 100%;
+    width: 100%;
+  }
+}
 
 @media print  {
   .noprint  {
